2009-12-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Add BSP_HAS_FRAME_BUFFER.

2009-12-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/ckinit.c: Fix warning.

2009-12-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Make bsp_mem_size available for page table
	initialization.

2009-12-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h, startup/bspgetworkarea.c: Rework bsp_size_memory() to
	ensure that multiboot information regarding memory size is used as
	the primary source. This was broken in the move to supporting a
	unified workspace. It worked this way in 4.9 so this was a
	regression.

2009-12-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Add debug printk's.
	* startup/linkcmds: Using "-Wl,--defsym -Wl,RamSize=0x1000000"
	results in _RamSize being defined.  Handle this properly.



2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: BSP should not define
	CONFIGURE_NUMBER_OF_TERMIOS_PORTS.

2009-11-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ne2000/ne2000.c: Logic on defaulting port number was inverted when
	adding command line arguments.

2009-11-05	Till Straumann <strauman@slac.stanford.edu>

	* console/console.c: Fixed compiler warning.

2009-11-05	Till Straumann <strauman@slac.stanford.edu>

	* start/start.S, console/console.c: Separated code
	that switched console and printk port based on info
	gathered from the commandline and/or a BSP provided
	routine into new BSP_console_select() which is called
	from 'start.S' so that early messages make it to the
	redirected printk port.

2009-10-28	Till Straumann <strauman@slac.stanford.edu>

	* start/start.S: Make sure initial stack is aligned
	to CPU_STACK_ALIGNMENT before calling C-code.

2009-10-27	Till Straumann <strauman@slac.stanford.edu>

	* include/bsp.h, console/console.c: Provide weak-alias
	hook so that the application may choose the console.
