@@ -43,17 +43,17 @@ HEADERADDR=0x00097E00
 
 LDFLAGS += -Wl,-Ttext,$(RELOCADDR)
 
-define bsp-post-link
-	$(default-bsp-post-link)
-	$(OBJCOPY) -O elf32-i386 \
-	    --remove-section=.comment \
-	    --remove-section=.note \
-	    --strip-unneeded $(basename $@).exe $(basename $@).nxe
-	$(OBJCOPY) -O binary $(basename $@).nxe $(basename $@).bin
-	$(PROJECT_TOOLS)/bin2boot -v $(basename $@)$(DOWNEXT) $(HEADERADDR)\
-	  $(START16FILE) $(START16ADDR) 0 $(basename $@).bin $(RELOCADDR) 0
-	rm -f $(basename $@).nxe
-endef
+#define bsp-post-link
+#	$(default-bsp-post-link)
+#	$(OBJCOPY) -O elf32-i386 \
+#	    --remove-section=.comment \
+#	    --remove-section=.note \
+#	    --strip-unneeded $(basename $@).exe $(basename $@).nxe
+#	$(OBJCOPY) -O binary $(basename $@).nxe $(basename $@).bin
+#	$(PROJECT_TOOLS)/bin2boot -v $(basename $@)$(DOWNEXT) $(HEADERADDR)\
+#	  $(START16FILE) $(START16ADDR) 0 $(basename $@).bin $(RELOCADDR) 0
+#	rm -f $(basename $@).nxe
+#endef
 
 # BSP-specific tools
 BIN2BOOT=$(PROJECT_TOOLS)/bin2boot
